<resources>
    <string name="app_name">SkyGazer</string>
    <string name="title_map_view">Map Overlays</string>
    <string name="title_sky_view">Sky View</string>
    <string name="title_settings">Settings</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiY3BpdHJlMSIsImEiOiJjbG8xMDJobnowM2FxMm1rMDB6czlrbmNoIn0.Bf_tsoBbkvD4qV-N2tMOlA</string>
    <string name="user_location_permission_explanation">SkyGazer needs your location to accurately display light pollution and cloud cover data.</string>


    <string name="category_general_title">General</string>
    <string name="category_accessibility_title">Accessibility</string>

    <string name="star_data_cache_title">Cache Data To Disk</string>
    <string name="star_data_cache_summary">Turns on/off manual cache saves</string>

    <string name="low_light_title">Low Light Mode</string>

    <string name="info_advanced_title">Advanced Information</string>
    <string name="info_advanced_summary">Displays the HYG ID number when looking at a star\'s information</string>

    <string name="feedback_audio_title">Audio Feedback</string>
    <string name="feedback_audio_summary">Tells you the name of a star when you click on it</string>

    <string name="highlight_constellation_title">Constellation Highlighting</string>
    <string name="highlight_constellation_summary">Highlights constellations when they are in view</string>

    <string name="feedback_tactile_title">Vibrations</string>
    <string name="feedback_tactile_summary">Makes device vibrate when a constellation comes into view</string>

    <string name="notifications_celestial_title">Upcoming Celestial Notifications</string>
    <string name="notifications_celestial_summary">Whenever there is an upcoming celestial event, you will be sent a notification</string>

    <string name="open_map_settings">Open Map Settings</string>
    <string name="close_map_settings">Close Map Settings</string>

    <string name="constellation_visibility_description">An eye for seeing what constellations are visible.</string>
    <string name="not_visible">Not Visible:</string>
    <string name="currently_visible">Currently Visible:</string>
    <string name="bottomSheetInfo">The Letter i</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="focused_view_id">focused_view</string>
</resources>